Bug 349984 - Can not open configuration dialog
Summary: Can not open configuration dialog
Status: RESOLVED FIXED
Alias: None
Product: kbruch
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Stein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-07 03:04 UTC by André Marcelo Alvarenga
Modified: 2015-09-26 23:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 15.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2015-07-07 03:04:03 UTC
In Exercise or Learning mode, try open configuration dialog using menu:

Setting -> Configure Kbruch

Reproducible: Always




KBruch 5.0
Kubuntu 15.04 with Plasma 5.3.1, Frameworks 5.9
Comment 1 Burkhard Lück 2015-07-07 06:23:59 UTC
Confirmed in recent master compiled from sources
Comment 2 Luigi Toscano 2015-09-26 23:37:56 UTC
Git commit 697d042ca19f15e1fec0cea6325cef21be83c0f1 by Luigi Toscano.
Committed on 26/09/2015 at 23:33.
Pushed by ltoscano into branch 'Applications/15.08'.

Restore slot definition

Otherwise at least old type connection (like KStandardActions)
do not work and a warning is printed.
FIXED-IN: 15.08.2
REVIEW: 125406

M  +3    -0    src/FractionRingWidget.h
M  +3    -0    src/MainQtWidget.h

http://commits.kde.org/kbruch/697d042ca19f15e1fec0cea6325cef21be83c0f1