Restore slot definition

Otherwise at least old type connection (like KStandardActions)
do not work and a warning is printed.

BUG: 349984
FIXED-IN: 15.08.2
REVIEW: 125406